--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,11 @@ jobs:
 
       # Step 7: Build the Docker image
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bloodpressuretracker:latest .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/MeasurementService:latest MeasurementService/
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/PatientService:latest PatientService/
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/BPTMigration:latest Data_and_Models/Migration.Dockerfile
 
       # Step 8: Push the Docker image to Docker Hub
       - name: Push Docker image
