--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,11 +44,11 @@ jobs:
 
       # Step 7: Build the Docker image
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/measurementservice:latest MeasurementService/
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/measurementservice:latest -f MeasurementService/Dockerfile .
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/patientservice:latest PatientService/
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/patientservice:latest -f PatientService/Dockerfile .
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bptmigration:latest Data_and_Models/Migration.Dockerfile
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bptmigration:latest -f Data_and_Models/Migration.Dockerfile .
 
       # Step 8: Push the Docker image to Docker Hub
       - name: Push Docker image
