--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,9 +31,9 @@ jobs:
       - name: Build the project
         run: dotnet build --no-restore
 
-      # Step 5: Run tests
-      - name: Run tests
-        run: dotnet test --no-build --verbosity normal
+      # Step 5: Migrate Database
+      - name: Run database migrations
+        run: dotnet ef database update
 
       # Step 6: Log in to Docker Hub
       - name: Log in to Docker Hub
@@ -50,12 +50,11 @@ jobs:
       - name: Build Docker image
         run: docker build -t ${{ secrets.DOCKER_USERNAME }}/bptmigration:latest -f Data_and_Models/Migration.Dockerfile .
 
-      # Step 8: Push the Docker image to Docker Hub
+      # Step 8: Push the Docker images to Docker Hub
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/measurementservice:latest
-      
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/patientservice:latest
-      
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/bptmigration:latest
+      
